# hip-mma-bench

./: CMakeLists.txt  README.md  common.cpp  common.h  common.hip  fp32.hip  mma.hip
cmake/: Findrocwmma.cmake
kernels/: fp32.hip  mma.hip  mma_m16n16k16_s32s4s4s32.hpp  mma_m16n16k32_fp32bf8bf8fp32.h  mma_m16n16k32_fp32fp8fp8fp32.h  precision.h  precision.hpp
mma-extensions/: CMakeLists.txt  fp8.hip  int8.hip
mma-extensions/include/: mfma_fp8.h  wmma_int8.h
